--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>#e40 web color duet with black</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="color-scheme" content="dark light">
-<meta name="theme-color" content="#102986">
+<meta name="theme-color" content="#e40">
 <meta name="description" content="swatch">
 <link rel="home" href="https://s9a.page">
 <link rel="icon" href="icon.svg">
