--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-US" class="swatch">
 <meta charset="utf-8">
-<title>jordan blue</title>
+<title>#e40 web color duet with black</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="color-scheme" content="dark light">
-<meta name="theme-color" content="#102986">
+<meta name="theme-color" content="#e40">
 <meta name="description" content="swatch">
 <link rel="home" href="https://s9a.page">
 <link rel="icon" href="icon.svg">
 <link rel="stylesheet" href="swatch.css">
 
-<figure aria-label="swatch">
-  <dl class="mc">
-    <dt lang="en-US">jordan<wbr>blue</dt>
-    <dt lang="fr-US">jordan<wbr>bleu</dt>
-    <dd><code>#102986</code></dd>
-  </dl>
-  <figcaption class="mc fyi">
-    <code>#102986</code> appears on sunny
-    <code>#f0f710</code> during daylight
-    to heal seasonal affective disorder
-    and flips via
-    <a href="https://mdn.io/prefers-color-scheme"><code>media</code></a>
-    to nightlight for deep dreaming&hellip;
-    this color duet meets
-    <a href="https://www.w3.org/TR/WCAG/#contrast-enhanced">AAA</a> level
-    <a href="https://contrast-ratio.com/#%23102986-on-%23f0f710"><data value="10.7">contrast ratio</data></a>
-  </figcaption>
+<figure aria-label="duet">
+  <ul>
+    <li><code>#e40</code> on <code>black</code> all nite
+    <li><code>black</code> on <code>#e40</code> all day
+    <li>
+      <a href="https://www.w3.org/TR/WCAG/#contrast-minimum">AA level</a>
+      <a href="https://contrast-ratio.com/#black-on-%23e40">contrast ratio</a>
+      <data value="5.46">5.46</data>
+    <li>shoutout to <a href="https://s9a.page/bae">bay area</a>
+      rapper <a href="https://en.wikipedia.org/wiki/E-40">E-40</a>
+  </ul>
 </figure>
