--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <a href="https://www.w3.org/TR/WCAG/#contrast-minimum">AA level</a>
       <a href="https://contrast-ratio.com/#black-on-%23e40">contrast ratio</a>
       <data value="5.46">5.46</data>
-    <li>shoutout to <a href="https://s9a.page/bae">bay area</a>
-      rapper <a href="https://en.wikipedia.org/wiki/E-40">E-40</a>
+    <li>shoutout to
+      <a href="https://s9a.page/bae">bay area</a>
+      <a href="https://www.youtube.com/user/E40TV/videos">rapper</a>
+      <a href="https://en.wikipedia.org/wiki/E-40">E-40</a>
   </ul>
 </figure>
